syntax = "proto3";

package user.v1;

import "google/protobuf/timestamp.proto";
 import "buf/validate/validate.proto";


// like message type
message User {
    string id = 1 [
 (buf.validate.field).string.uuid = true
 ];    
    string name = 2;
    string email = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;   
}


// create user request message type

message CreateUserRequest {
    string name = 1;
    string email = 2;
}

message CreateUserResponse {
    User user = 1;
}


service UserService {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
}
